--- a/pro.html
+++ b/pro.html
@@ -3,227 +3,255 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loco Otro Clone</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+    <title>LOCO OTRO | Kinetic 3D Spread</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Playfair+Display:ital,wght@1,900&family=Montserrat:wght@300;800&display=swap" rel="stylesheet">
     <style>
         :root {
-            --bg-color: #f2ebe3;
-            --card-bg: #e8ded3;
-            --accent-red: #a62626;
-            --text-dark: #333;
-            --text-red: #8b1e1e;
+            --dark: #0d0d0d;
+            --accent: #a62626;
+            --cream: #f2ebe3;
         }
 
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
 
         body {
-            background-color: var(--bg-color);
+            background-color: var(--dark);
+            color: var(--cream);
             font-family: 'Montserrat', sans-serif;
-            color: var(--text-dark);
-            line-height: 1.5;
-            padding: 20px;
-        }
-
-        /* --- Header --- */
-        header {
+            height: 100vh;
+            overflow: hidden;
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
-            padding: 10px 0 40px;
+            perspective: 2000px;
         }
 
-        .logo {
-            border: 2px solid var(--accent-red);
-            padding: 5px 10px;
-            color: var(--accent-red);
-            font-weight: bold;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            font-size: 1.2rem;
-            border-radius: 4px;
+        /* --- Ambient Mouse Glow --- */
+        #glow {
+            position: fixed;
+            width: 600px;
+            height: 600px;
+            background: radial-gradient(circle, rgba(166, 38, 38, 0.15) 0%, transparent 70%);
+            pointer-events: none;
+            transform: translate(-50%, -50%);
+            z-index: 0;
         }
 
-        .menu-icon {
-            width: 30px;
-            height: 20px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            cursor: pointer;
-        }
-
-        .menu-icon span {
-            display: block;
-            height: 3px;
-            width: 100%;
-            background-color: #2c3e50;
-            border-radius: 3px;
-        }
-
-        /* --- Hero Section --- */
-        .hero {
-            text-align: center;
+        /* --- The 3D Stage --- */
+        .stage {
             position: relative;
-            background-color: #e8ded3;
-            padding: 60px 20px;
-            border-radius: 15px;
-            margin-bottom: 40px;
-            max-width: 800px;
-            margin-left: auto;
-            margin-right: auto;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transform-style: preserve-3d;
         }
 
-        .hero p {
-            font-size: 0.9rem;
-            color: var(--text-red);
-            max-width: 500px;
-            margin: 0 auto 30px;
-        }
-
-        .btn-member {
-            background-color: var(--accent-red);
-            color: white;
-            padding: 15px 40px;
-            border-radius: 50px;
-            text-decoration: none;
-            font-weight: bold;
-            font-size: 1.1rem;
-            display: inline-block;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-        }
-
-        .chef-sid-badge {
+        /* --- THE VECTOR HAND --- */
+        .hand-vector {
             position: absolute;
-            right: -20px;
-            bottom: 20px;
-            font-family: 'Dancing Script', cursive;
-            color: var(--accent-red);
-            font-size: 2.5rem;
-            transform: rotate(-10deg);
-            line-height: 0.8;
+            bottom: -100px;
+            left: -500px;
+            width: 450px;
+            z-index: 1000;
+            filter: drop-shadow(0 20px 50px rgba(0,0,0,0.5));
+            animation: dealSwipe 3.5s cubic-bezier(0.23, 1, 0.32, 1) forwards;
         }
 
-        /* --- Grid Layout --- */
-        .grid-container {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
-            max-width: 1000px;
-            margin: 0 auto;
+        @keyframes dealSwipe {
+            0% { left: -500px; transform: rotate(20deg); }
+            40% { left: 30%; transform: rotate(0deg); }
+            100% { left: 150%; transform: rotate(-20deg); }
         }
 
-        /* Custom rule for the bottom row (2 cards) */
-        .bottom-row {
-            grid-column: span 3;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 20px;
-            margin-top: 20px;
+        /* --- 3D FLIP CARDS --- */
+        .card-container {
+            position: absolute;
+            width: 260px;
+            height: 380px;
+            opacity: 0;
+            transform: translateY(300px) scale(0.5);
+            transition: all 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            perspective: 1000px;
         }
 
-        /* --- Card Styles --- */
-        .card {
-            background-color: var(--card-bg);
-            border-radius: 15px;
-            padding: 15px;
+        .card-container.active {
+            opacity: 1;
+        }
+
+        .card-inner {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            transform-style: preserve-3d;
+            transition: transform 0.6s;
+        }
+
+        .card-container:hover .card-inner {
+            transform: rotateY(180deg);
+        }
+
+        .card-front, .card-back {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            border-radius: 20px;
+            padding: 30px;
             display: flex;
             flex-direction: column;
+            justify-content: center;
+            align-items: center;
             text-align: center;
+            border: 2px solid var(--accent);
         }
 
-        .card-img {
-            width: 100%;
-            aspect-ratio: 3 / 4;
-            background-color: #ccc;
-            border-radius: 10px;
-            object-fit: cover;
-            margin-bottom: 15px;
+        .card-front {
+            background: var(--cream);
+            color: var(--dark);
         }
 
-        .card-title {
-            font-family: 'Dancing Script', cursive;
-            color: var(--accent-red);
-            font-size: 1.8rem;
-            margin-bottom: 8px;
+        .card-back {
+            background: var(--accent);
+            color: var(--cream);
+            transform: rotateY(180deg);
         }
 
-        .card-desc {
-            font-size: 0.75rem;
-            color: var(--text-red);
-            padding: 0 10px 10px;
+        .card-icon { font-size: 3.5rem; margin-bottom: 20px; }
+        .card-title { font-family: 'Dancing Script', cursive; font-size: 2rem; color: var(--accent); margin-bottom: 10px; }
+        .card-back .card-title { color: white; }
+        .card-desc { font-size: 0.8rem; line-height: 1.5; font-weight: 300; }
+
+        /* Individual Spread Positions */
+        .c1.active { transform: translate(-420px, -30px) rotateZ(-12deg) scale(1); }
+        .c2.active { transform: translate(-140px, 20px) rotateZ(-4deg) scale(1); }
+        .c3.active { transform: translate(140px, 20px) rotateZ(4deg) scale(1); }
+        .c4.active { transform: translate(420px, -30px) rotateZ(12deg) scale(1); }
+
+        .btn-join {
+            margin-top: 20px;
+            padding: 10px 25px;
+            border: 2px solid white;
+            color: white;
+            text-decoration: none;
+            border-radius: 50px;
+            font-size: 0.7rem;
+            font-weight: 800;
+            transition: 0.3s;
         }
 
-        /* --- Responsive Design --- */
-        @media (max-width: 768px) {
-            .grid-container, .bottom-row {
-                grid-template-columns: 1fr;
-            }
-            .bottom-row {
-                grid-column: span 1;
-                margin-top: 0;
-            }
-            .chef-sid-badge {
-                right: 10px;
-                font-size: 1.8rem;
-            }
-        }
+        .btn-join:hover { background: white; color: var(--accent); }
+
     </style>
 </head>
 <body>
 
-    <header>
-        <div class="logo">Loco Otro</div>
-        <div class="menu-icon">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-    </header>
+    <div id="glow"></div>
 
-    <section class="hero">
-        <p>Chef Sid's Club offers exclusive pricing for its members, creating an unparalleled experience that goes beyond just dining. This membership fosters a vibrant community.</p>
-        <a href="#" class="btn-member">Become a Member</a>
-        <div class="chef-sid-badge">Chef<br>Sid's<br>Club</div>
-    </section>
-
-    <div class="grid-container">
-        <div class="card">
-            <img src="https://via.placeholder.com/300x400?text=Loco+Access" alt="Access" class="card-img">
-            <h3 class="card-title">Loco Access</h3>
-            <p class="card-desc">Visit Loco anytime and gain priority access to events and start to enjoy exclusive member rates.</p>
+    <div class="stage">
+        <div class="hand-vector">
+            <svg viewBox="0 0 500 300" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0 100 L150 50 L250 250 L50 280 Z" fill="#a62626"/>
+                <path d="M150 50 C 250 10, 350 30, 420 100 L400 220 C 350 280, 200 270, 150 200 Z" fill="#E8C3A9"/>
+                <rect x="250" y="80" width="120" height="40" rx="20" fill="#E8C3A9" transform="rotate(-15 250 80)"/>
+            </svg>
         </div>
 
-        <div class="card">
-            <img src="https://via.placeholder.com/300x400?text=Loco+Celebrations" alt="Celebrations" class="card-img">
-            <h3 class="card-title">Loco Celebrations</h3>
-            <p class="card-desc">Our team will arrange a special setup for birthdays and anniversaries, complemented by a bottle of wine.</p>
-        </div>
-
-        <div class="card">
-            <img src="https://via.placeholder.com/300x400?text=Exclusive+Pricing" alt="Pricing" class="card-img">
-            <h3 class="card-title">Loco Exclusive Pricing</h3>
-            <p class="card-desc">Enjoy exclusive member-only pricing on food and drinks every time you visit Loco.</p>
-        </div>
-
-        <div class="bottom-row">
-            <div class="card">
-                <img src="https://via.placeholder.com/500x400?text=Loco+on+the+House" alt="House" class="card-img">
-                <h3 class="card-title">Loco on the House</h3>
-                <p class="card-desc">Introducing the Founder's Table, an exclusive members-only experience hosted by Chef Siddharth. Intimate gatherings with curated drinks.</p>
+        <div class="card-container c1" id="c1">
+            <div class="card-inner">
+                <div class="card-front">
+                    <span class="card-icon">🗝️</span>
+                    <h3 class="card-title">Loco Access</h3>
+                    <p class="card-desc">Priority entry to the crazy other side. Exclusive member rates on all events.</p>
+                </div>
+                <div class="card-back">
+                    <h3 class="card-title">Unlock Now</h3>
+                    <p>Enter the inner circle today.</p>
+                    <a href="#" class="btn-join">JOIN CLUB</a>
+                </div>
             </div>
+        </div>
 
-            <div class="card">
-                <img src="https://via.placeholder.com/500x400?text=Quickie+in+the+Bar" alt="Bar" class="card-img">
-                <h3 class="card-title">Quickie in the Bar</h3>
-                <p class="card-desc">Explore the art of mixology with our expert in-house mixologists and make your favourite drink. Gain insights into bar functioning.</p>
+        <div class="card-container c2" id="c2">
+            <div class="card-inner">
+                <div class="card-front">
+                    <span class="card-icon">🍷</span>
+                    <h3 class="card-title">Founder's Table</h3>
+                    <p class="card-desc">Dine with Chef Sid. An intimate session of curated treats and direct access.</p>
+                </div>
+                <div class="card-back">
+                    <h3 class="card-title">Reserve Spot</h3>
+                    <p>Limited seats for the table.</p>
+                    <a href="#" class="btn-join">JOIN CLUB</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card-container c3" id="c3">
+            <div class="card-inner">
+                <div class="card-front">
+                    <span class="card-icon">🍸</span>
+                    <h3 class="card-title">Bar Quickie</h3>
+                    <p class="card-desc">Master the art of the perfect pour. Hands-on sessions with our mixologists.</p>
+                </div>
+                <div class="card-back">
+                    <h3 class="card-title">Mix It Up</h3>
+                    <p>Learn the secrets of the bar.</p>
+                    <a href="#" class="btn-join">JOIN CLUB</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card-container c4" id="c4">
+            <div class="card-inner">
+                <div class="card-front">
+                    <span class="card-icon">👨‍🍳</span>
+                    <h3 class="card-title">Kitchen Quickie</h3>
+                    <p class="card-desc">Go behind the scenes and learn the fire behind our signature tapas.</p>
+                </div>
+                <div class="card-back">
+                    <h3 class="card-title">Start Cooking</h3>
+                    <p>The kitchen is your stage.</p>
+                    <a href="#" class="btn-join">JOIN CLUB</a>
+                </div>
             </div>
         </div>
     </div>
 
-</body>
-                  </html>
+    <script>
+        const glow = document.getElementById('glow');
+        const cards = document.querySelectorAll('.card-container');
 
+        // Mouse Glow Tracking
+        document.addEventListener('mousemove', (e) => {
+            glow.style.left = e.clientX + 'px';
+            glow.style.top = e.clientY + 'px';
+        });
+
+        // Sequential "Release" of cards
+        setTimeout(() => cards[0].classList.add('active'), 1000);
+        setTimeout(() => cards[1].classList.add('active'), 1400);
+        setTimeout(() => cards[2].classList.add('active'), 1800);
+        setTimeout(() => cards[3].classList.add('active'), 2200);
+
+        // Individual Card Parallax Tilt
+        cards.forEach(card => {
+            card.addEventListener('mousemove', (e) => {
+                const rect = card.getBoundingClientRect();
+                const x = (e.clientX - rect.left) / rect.width - 0.5;
+                const y = (e.clientY - rect.top) / rect.height - 0.5;
+                
+                const inner = card.querySelector('.card-inner');
+                // Tilt card toward mouse while keeping it active
+                inner.style.transform = `rotateY(${x * 20}deg) rotateX(${y * -20}deg)`;
+            });
+
+            card.addEventListener('mouseleave', () => {
+                const inner = card.querySelector('.card-inner');
+                inner.style.transform = `rotateY(0deg) rotateX(0deg)`;
+            });
+        });
+    </script>
+</body>
+</html>
