--- a/3.html
+++ b/3.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loco Otro | Membership 2025 Recap</title>
+    <title>Loco Otro | Immersive Membership Recap</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&display=swap" rel="stylesheet">
     <style>
         :root {
             --red: #a62626;
             --cream: #f2ebe3;
-            --black: #000;
+            --green: #00ff00; /* High-contrast green from storyboard */
         }
 
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -17,11 +17,10 @@
         body {
             background-color: var(--red);
             font-family: 'Montserrat', sans-serif;
-            color: white;
             overflow-x: hidden;
         }
 
-        /* --- THE 360 VIDEO CONTAINER --- */
+        /* --- THE STICKY 360 BACKGROUND --- */
         .video-viewport {
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100vh;
@@ -29,26 +28,27 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: var(--red);
+            background: radial-gradient(circle, #c42e2e 0%, #a62626 100%);
         }
 
-        /* Static Placeholder for the 360 Video */
         .video-360-placeholder {
-            width: 80%;
-            height: 70%;
-            background: url('https://images.unsplash.com/photo-1514362545857-3bc16c4c7d1b?auto=format&fit=crop&q=80&w=1200') center;
+            width: 85vw;
+            height: 75vh;
+            background: url('https://images.unsplash.com/photo-1550966841-3ee7adac1661?auto=format&fit=crop&q=80&w=1200') center;
             background-size: cover;
-            border-radius: 50%; /* Circular 360 feel */
-            border: 10px solid rgba(255,255,255,0.1);
-            filter: sepia(0.5) brightness(0.7) hue-rotate(-30deg); /* Reddish tint */
+            border-radius: 40px;
+            filter: sepia(0.6) brightness(0.6) contrast(1.2);
+            opacity: 0.6;
+            transition: transform 0.1s ease-out;
         }
 
-        .recap-text {
+        .floating-text {
             position: absolute;
-            font-size: 8vw;
+            font-size: 10vw;
             font-weight: 900;
-            opacity: 0.2;
-            text-transform: uppercase;
+            color: white;
+            opacity: 0.15;
+            letter-spacing: -5px;
         }
 
         /* --- SCROLL SECTIONS --- */
@@ -58,141 +58,140 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            position: relative;
-            padding: 20px;
             text-align: center;
+            padding: 40px;
         }
 
-        /* --- OVERLAY ELEMENTS --- */
-        .icon-overlay {
-            width: 200px;
-            height: 200px;
-            margin-bottom: 20px;
+        /* --- DETAILED VECTOR OVERLAYS --- */
+        .overlay-container {
+            position: relative;
+            width: 350px;
+            height: 350px;
             opacity: 0;
-            transform: translateY(50px) scale(0.8);
-            transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            transform: scale(0.8) translateY(50px);
+            transition: all 0.7s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         }
 
-        .label {
-            background: #00ff00; /* Green highlight from storyboard */
+        .in-view .overlay-container { opacity: 1; transform: scale(1) translateY(0); }
+
+        .green-label {
+            background: var(--green);
             color: black;
-            padding: 5px 15px;
-            font-size: 1rem;
-            font-weight: 700;
+            font-weight: 900;
+            padding: 10px 20px;
             text-transform: uppercase;
-            opacity: 0;
-            transform: translateY(20px);
-            transition: all 0.6s ease 0.2s;
+            font-size: 1.2rem;
+            margin-top: 30px;
+            box-shadow: 10px 10px 0px rgba(0,0,0,0.2);
         }
-
-        /* Active State when in view */
-        .in-view .icon-overlay { opacity: 1; transform: translateY(0) scale(1); }
-        .in-view .label { opacity: 1; transform: translateY(0); }
 
         /* --- FOOTER --- */
         footer {
             background: white;
-            padding: 40px;
+            padding: 50px 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 30px;
+        }
+
+        .footer-nav {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 20px;
-            align-items: center;
-        }
-
-        .footer-item {
-            color: black;
-            text-decoration: none;
-            font-weight: 700;
-            font-size: 0.7rem;
-            text-transform: uppercase;
-            padding: 10px;
-            transition: transform 0.2s;
-        }
-
-        /* Micro-motion on click/hover */
-        .footer-item:active { transform: scale(0.9) rotate(-5deg); }
-        .footer-item:hover { transform: translateY(-5px); color: var(--red); }
-
-        .social-icons {
-            display: flex;
             gap: 15px;
-            margin-left: 30px;
         }
 
-        .social-circle {
-            width: 35px;
-            height: 35px;
-            background: black;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 1rem;
-            cursor: pointer;
+        .footer-link {
+            text-decoration: none;
+            color: black;
+            font-weight: 700;
+            font-size: 0.8rem;
+            text-transform: uppercase;
+            padding: 8px 15px;
+            border: 2px solid transparent;
             transition: all 0.2s;
         }
 
-        .social-circle:active { transform: scale(1.3); background: var(--red); }
+        .footer-link:hover { border-color: black; transform: translateY(-3px); }
+
+        .social-row { display: flex; gap: 20px; }
+        .circle-btn {
+            width: 45px; height: 45px;
+            background: black;
+            color: white;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-weight: 900;
+            cursor: pointer;
+            transition: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        }
+        .circle-btn:hover { transform: scale(1.4) rotate(10deg); background: var(--red); }
 
     </style>
 </head>
 <body>
 
     <div class="video-viewport">
-        <div class="recap-text" style="left: 10%;">2025</div>
-        <div class="video-360-placeholder"></div>
-        <div class="recap-text" style="right: 10%;">RECAP</div>
+        <div class="floating-text" style="top: 10%; left: 5%;">2025</div>
+        <div class="video-360-placeholder" id="bg-video"></div>
+        <div class="floating-text" style="bottom: 10%; right: 5%;">RECAP</div>
     </div>
 
-    <section id="kitchen">
-        <div class="icon-overlay">
-            <svg viewBox="0 0 200 200" fill="#E8C3A9">
-                <path d="M50 150 C 30 130, 40 80, 70 60 L80 10 C 90 -5, 120 -5, 130 10 L140 60 C 160 80, 165 130, 150 160 Z" />
-                <rect x="70" y="80" width="60" height="20" fill="white" rx="10"/>
+    <section>
+        <div class="overlay-container">
+            <svg viewBox="0 0 300 200" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M40 150 C 30 140, 30 100, 45 80 C 50 60, 65 40, 80 45 C 90 50, 95 70, 95 90 L85 140 Z" fill="#E8C3A9" stroke="#5a2e2e"/>
+                <path d="M260 150 C 270 140, 270 100, 255 80 C 250 60, 235 40, 220 45 C 210 50, 205 70, 205 90 L215 140 Z" fill="#E8C3A9" stroke="#5a2e2e"/>
+                <path d="M95 90 C 110 80, 130 90, 120 110" stroke="#5a2e2e" stroke-width="2"/>
+                <path d="M205 90 C 190 80, 170 90, 180 110" stroke="#5a2e2e" stroke-width="2"/>
+                <rect x="135" y="95" width="30" height="8" fill="white" rx="4"/>
             </svg>
         </div>
-        <span class="label">Quickie in the Kitchen</span>
+        <div class="green-label">Quickie in the Kitchen</div>
     </section>
 
-    <section id="discount">
-        <div class="icon-overlay">
+    <section>
+        <div class="overlay-container">
             <svg viewBox="0 0 200 200">
-                <path d="M100 20 L110 80 L170 80 L120 120 L140 180 L100 140 L60 180 L80 120 L30 80 L90 80 Z" fill="black" />
-                <path d="M100 10 L100 70 M90 10 L90 70 M110 10 L110 70" stroke="white" stroke-width="4"/>
+                <path d="M100 20 L115 70 L170 75 L125 110 L145 170 L100 135 L55 170 L75 110 L30 75 L85 70 Z" fill="black" />
+                <path d="M100 0 L100 90 M90 0 L90 85 M110 0 L110 85" stroke="white" stroke-width="5" stroke-linecap="round"/>
             </svg>
         </div>
-        <span class="label">200% OFF EVERY TIME YOU DINE WITH US</span>
+        <div class="green-label">200% Off Every Time You Dine</div>
     </section>
 
-    <section id="celebration">
-        <div class="icon-overlay">
+    <section>
+        <div class="overlay-container">
             <svg viewBox="0 0 200 200" fill="white">
-                <circle cx="70" cy="100" r="15"/>
-                <circle cx="130" cy="100" r="15"/>
-                <path d="M50 150 L150 150 L140 120 L60 120 Z" />
+                <circle cx="60" cy="80" r="18"/>
+                <circle cx="140" cy="80" r="18"/>
+                <path d="M40 160 L160 160 L150 110 L50 110 Z" />
             </svg>
         </div>
-        <span class="label">Special Celebration</span>
+        <div class="green-label">Special Celebration</div>
     </section>
 
     <footer>
-        <a href="#" class="footer-item">Instagram</a>
-        <a href="#" class="footer-item">Phone</a>
-        <a href="#" class="footer-item">Email</a>
-        <a href="#" class="footer-item">Buy Membership</a>
-        <a href="#" class="footer-item">Location</a>
-
-        <div class="social-icons">
-            <div class="social-circle">in</div>
-            <div class="social-circle">ig</div>
-            <div class="social-circle">wa</div>
+        <div class="footer-nav">
+            <a href="#" class="footer-link">Instagram</a>
+            <a href="#" class="footer-link">Phone</a>
+            <a href="#" class="footer-link">Email</a>
+            <a href="#" class="footer-link">Membership</a>
+            <a href="#" class="footer-link">Location</a>
+        </div>
+        <div class="social-row">
+            <div class="circle-btn">ig</div>
+            <div class="circle-btn">in</div>
+            <div class="circle-btn">wa</div>
+            <div class="circle-btn">📍</div>
         </div>
     </footer>
 
     <script>
-        // Intersection Observer to trigger overlays on scroll
+        // Use Intersection Observer for scroll triggers
         const observer = new IntersectionObserver((entries) => {
             entries.forEach(entry => {
                 if (entry.isIntersecting) {
@@ -201,19 +200,16 @@
                     entry.target.classList.remove('in-view');
                 }
             });
-        }, { threshold: 0.6 });
+        }, { threshold: 0.5 });
 
-        document.querySelectorAll('section').forEach(section => {
-            observer.observe(section);
-        });
+        document.querySelectorAll('section').forEach(sec => observer.observe(sec));
 
-        // Simple parallax effect for the 360 video background
+        // Parallax depth for the background "360 video"
         window.addEventListener('scroll', () => {
-            const video = document.querySelector('.video-360-placeholder');
-            const scrolled = window.pageYOffset;
-            video.style.transform = `rotate(${scrolled * 0.05}deg) scale(${1 + scrolled * 0.0001})`;
+            const scrollVal = window.pageYOffset;
+            const video = document.getElementById('bg-video');
+            video.style.transform = `rotate(${scrollVal * 0.03}deg) scale(${1 + scrollVal * 0.0001})`;
         });
     </script>
 </body>
 </html>
-
